# llm-local

./: .gitignore  CLAUDE.md  config.toml  main.py  pyproject.toml
docs/: architecture-decisions.md  design.md  phase-1-findings.md  phase-1-v2-results.md  phase-2-new-listing-plan.md
llm_local/: __init__.py  __main__.py  analysis.py  config.py  dashboard.py  data.py  harness.py  models.py  prompts.py  replay.py
tests/: conftest.py  test_analysis.py  test_config.py  test_data.py  test_harness.py  test_models.py  test_prompts.py  test_replay.py
