[project]
name = "llm-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.94.0",
    "ccxt>=4.5.48",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=1.9.0",
    "mempalace>=3.1.0",
    "openai>=2.31.0",
    "sqlalchemy>=2.0.49",
]
